--- a/EMS/core-bundle/src/Resources/views/revision/task/ajax.twig
+++ b/EMS/core-bundle/src/Resources/views/revision/task/ajax.twig
@@ -1,124 +1,197 @@
 {% trans_default_domain 'EMSCoreBundle' %}
 
-{% block taskItem %}
-    <li class="list-group-item tasks-item {{ isCurrent|default(false) ? 'tasks-item-current' }}" data-id="{{ task.id }}">
-        <div class="tasks-item-block">
-            <div class="tasks-item-info">
-                <i class="task-icon {{ task.statusIcon }}"></i>
-                <div>
-                    <div class="tasks-item-title">{{ task.title }}</div>
-                    <div id="task-info">
-                        {%- if task.hasDeadline -%}
-                            <span id="task-deadline {{ task.deadline.timestamp < 'now'|date('U') ? 'task-deadline-red' }}">
-                                <i class="fa fa-clock-o" aria-hidden="true"></i>&nbsp;{{ task.deadline.format(date_format) }}
-                            </span>
-                        {%- endif -%}
-                        <span>{{ 'task.assigned_to'|trans }}<strong>{{ task.assignee|displayname }}</strong></span>
+{% block tasksTab %}
+    <div id="revision-tasks-content">
+        {% if revision.isLockedFor(app.user.userIdentifier) %}
+            <div class="revision-tasks-info">{{- 'task.info.locked'|trans({
+                '%user%': revision.lockBy|displayname,
+                '%time%': revision.lockUntil.format(date_time_format)
+            }) -}}</div>
+        {% elseif revision.hasTasks == false %}
+            <div id="revision-tasks-empty" class="revision-tasks-info">{{ 'task.info.empty'|trans }}</div>
+            {{ block('buttonCreate') }}
+        {% else %}
+            <div id="revision-task-active">
+                {% if revision.hasTaskCurrent %}
+                    {% set taskCurrent = revision.taskCurrent %}
+                    <div id="revision-task-active-content">
+                        {{ block('taskActive') }}
                     </div>
-                    {% if isCurrent|default(false) %}
-                        <div><span class="task-current-status label label-{{ task.statusLabel }}">{{ "task.status.#{task.status}"|trans }}</span></div>
-                    {% endif %}
-                </div>
+                {% endif %}
             </div>
-            <button class="btn-task-update-modal btn btn-sm pull-right"
-                    data-title="{{ 'task.update.title'|trans({ '%title%': task.title }) }}"
-                    data-url="{{ path('ems_core_task_ajax_modal_update', { revisionId: revision.id, taskId: task.id }) }}">
-                <i class="fa fa-pencil-square-o"></i>
-            </button>
+            {% if tasksPlanned|length > 0 %}
+                <div id="revision-tasks-planned">
+                    <div id="revision-tasks-planned-header">
+                            <div class="revision-tasks-title">{{ 'task.planned.title'|trans }}</div>
+                            <div id="revision-tasks-reorder">
+                                {% if tasksPlanned|length > 1 %}<a id="btn-tasks-reorder" href="#">{{ 'task.info.change_order'|trans }}</a>{% endif %}
+                                <button id="btn-tasks-reorder-save" class="btn btn-xs btn-primary" style="display: none;"
+                                        data-url="{{ path('ems_core_task_ajax_reorder', {'revisionId': revision.id }) }}">save</button>
+                                <button id="btn-tasks-reorder-cancel" class="btn btn-xs btn-default" style="display: none;">cancel</button>
+                            </div>
+                    </div>
+                    <ul id="revision-tasks-planned-list" class="list-group revision-tasks">
+                        {% for taskPlanned in tasksPlanned %}
+                            {% with { 'task': taskPlanned } %}{{ block('taskItem') }}{% endwith %}
+                        {% endfor %}
+                    </ul>
+                </div>
+            {% endif %}
+            {{ block('buttonCreate') }}
+            {% if tasksApproved|length > 0 %}
+                <div id="revision-tasks-approved">
+                    <div id="revision-tasks-approved-link">
+                        <a href="#" id="btn-tasks-approved"
+                           data-toggle="true"
+                           data-toggle-text="{{ 'task.finished.hide'|trans({ '%number%': tasksApproved|length }) }}">
+                            {{- 'task.finished.show'|trans({ '%number%': tasksApproved|length }) -}}
+                        </a>
+                    </div>
+                    <ul id="revision-tasks-approved" class="list-group revision-tasks"  style="display: none;">
+                        {% for taskApproved in tasksApproved %}
+                            {% with { 'task': taskApproved } %}{{ block('taskItemApproved') }}{% endwith %}
+                        {% endfor %}
+                    </ul>
+                </div>
+            {% endif %}
+        {% endif %}
+    </div>
+{% endblock %}
+
+{% block buttonCreate %}
+    <button id="btn-task-create-modal"
+            data-url="{{ path('ems_core_task_ajax_modal_create', {'revisionId': revision.id}) }}"
+            data-title="{{ 'task.create.title'|trans }}"
+            class="btn btn-sm btn-primary btn-task-modal task-icon-create">{{ 'task.create.button'|trans }}</button>
+{% endblock %}
+
+{% block taskActive %}
+    {% set viewUrl = path('ems_core_task_ajax_modal_task', {'revisionId': revision.id, 'taskId': taskCurrent.id, 'fromRevision': true }) %}
+    <div id="task-item-active">
+        <div class="tasks-item-block">
+            <a href="#" class="tasks-item" data-url="{{ viewUrl }}" data-title="Task: {{ taskCurrent.title }}">
+                <div class="tasks-item-info">
+                    <i class="task-icon {{ taskCurrent.statusIcon }}"></i>
+                    <div>
+                        <div class="tasks-item-title">{{ taskCurrent.title }}</div>
+                        <div id="task-info">
+                            <span id="task-deadline {{ taskCurrent.deadline.timestamp < 'now'|date('U') ? 'task-deadline-red' }}">
+                                <i class="fa fa-clock-o" aria-hidden="true"></i>&nbsp;{{ taskCurrent.deadline.format(date_format) }}
+                            </span>
+                            <span>{{ 'task.assigned_to'|trans }}<strong>{{ taskCurrent.assignee|displayname }}</strong></span>
+                        </div>
+                        <div><span class="task-current-status label label-{{ taskCurrent.statusLabel }}">{{ "task.status.#{taskCurrent.status}"|trans }}</span></div>
+                    </div>
+                </div>
+            </a>
+            {% if taskCurrent.isRequester(app.user) or is_granted('ROLE_TASK_MANAGER')  %}
+                <button class="btn-task-update-modal btn-task-modal btn btn-sm pull-right"
+                        data-title="{{ 'task.update.title'|trans({ '%title%': taskCurrent.title }) }}"
+                        data-url="{{ path('ems_core_task_ajax_modal_update', { revisionId: revision.id, taskId: taskCurrent.id }) }}">
+                </button>
+            {% endif %}
         </div>
         {% if formHandle is defined %}
             <div id="tasks-item-handle">
                 {{ form_start(formHandle) }}
-                {% set logCompleted = task.getLatestCompleted %}
-                {% if formHandle.approve is defined and logCompleted %}
+                {% set logCompleted = taskCurrent.getLatestCompleted %}
+                {% if formHandle.approve is defined and logCompleted and logCompleted.comment != null %}
                     <p class="task-comment bg-gray-light">{{ logCompleted.comment }}</p>
                 {% endif %}
 
-                {% set logRejection = task.getLatestRejection %}
-                {% if formHandle.send is defined and logRejection %}
+                {% set logRejection = taskCurrent.getLatestRejection %}
+                {% if formHandle.send is defined and logRejection and logRejection.comment != null %}
                     <p class="task-comment bg-danger">{{ logRejection.comment }}</p>
                 {% endif %}
 
-                {% if formHandle.comment is defined %}
-                    {{ form_row(formHandle.comment) }}
-                {% endif %}
+                {% if formHandle.comment is defined %}{{ form_row(formHandle.comment) }}{% endif %}
 
-                {% if formHandle.send is defined %}
-                    {{ form_widget(formHandle.send, {
-                        'id': 'btn-handle-send',
-                        'label': '<i class="fa fa-paper-plane"></i> ' ~ 'task.validation.send'|trans,
-                        'label_html': true,
-                        'attr': {'class': 'btn btn-sm btn-primary'}
-                    }) }}
-                {% endif %}
-                {% if formHandle.approve is defined %}
-                    {{ form_widget(formHandle.approve, {
-                        'id': 'btn-handle-approve',
-                        'label': '<i class="fa fa-check"></i> ' ~ 'task.validation.approve'|trans,
-                        'label_html': true,
-                        'attr': {'class': 'btn btn-sm btn-primary'}
-                    }) }}
-                {% endif %}
-                {% if formHandle.reject is defined %}
-                    {{ form_widget(formHandle.reject, {
-                        'id': 'btn-handle-reject',
-                        'label': '<i class="fa fa-close"></i> ' ~ 'task.validation.reject'|trans,
-                        'label_html': true,
-                        'attr': {'class': 'btn btn-sm btn-default pull-right'}
-                    }) }}
-                {% endif %}
+                {% for handleType in ['send', 'approve', 'reject'] %}
+                    {% if attribute(formHandle, handleType) is defined %}
+                        {{ form_widget(attribute(formHandle, handleType), {
+                            'id': "btn-task-handle-#{handleType}",
+                            'label': "task.validation.#{handleType}"|trans,
+                            'label_html': true,
+                            'attr': {
+                                'class': "btn btn-sm btn-task-handle btn-primary task-icon-#{handleType}",
+                                'data-type': handleType
+                            }
+                        }) }}
+                    {% endif %}
+                {% endfor %}
                 {{ form_end(formHandle) }}
             </div>
         {% endif %}
-    </li>
+    </div>
 {% endblock %}
 
-{% block taskItemApproved %}
-    <li class="list-group-item tasks-item"
-        data-url="{{ path('ems_core_task_ajax_modal_task', {'revisionId': revision.id, 'taskId': task.id }) }}"
-        data-title="Task: {{ task.title }}">
+{% block taskItem %}
+    {% set viewUrl = path('ems_core_task_ajax_modal_task', {'revisionId': revision.id, 'taskId': task.id, 'fromRevision': true  }) %}
+    <li class="list-group-item tasks-item" data-id="{{ task.id }}">
         <div class="tasks-item-block">
-            <div class="tasks-item-info">
-                <i class="task-icon {{ task.statusIcon }}"></i>
-                <div>
-                    <div class="tasks-item-title">{{ task.title }}</div>
-                    <div>{{ 'task.assigned_to'|trans }} <strong>{{ task.assignee|displayname }}</strong></div>
+            <a href="#" class="tasks-item" data-url="{{ viewUrl }}" data-title="Task: {{ task.title }}">
+                <div class="tasks-item-info">
+                    <i class="task-icon {{ task.statusIcon }}"></i>
+                    <div>
+                        <div class="tasks-item-title">{{ task.title }}</div>
+                        <div id="task-info">
+                            <span>{{ 'task.assigned_to'|trans }}<strong>{{ task.assignee|displayname }}</strong></span>
+                        </div>
+                        {% if isCurrent|default(false) %}
+                            <div><span class="task-current-status label label-{{ task.statusLabel }}">{{ "task.status.#{task.status}"|trans }}</span></div>
+                        {% endif %}
+                    </div>
                 </div>
-            </div>
+            </a>
+            {% if task.isRequester(app.user) or is_granted('ROLE_TASK_MANAGER')  %}
+                <button class="btn-task-update-modal btn-task-modal btn btn-sm pull-right"
+                        data-title="{{ 'task.update.title'|trans({ '%title%': task.title }) }}"
+                        data-url="{{ path('ems_core_task_ajax_modal_update', { revisionId: revision.id, taskId: task.id }) }}">
+                </button>
+            {% endif %}
         </div>
     </li>
 {% endblock %}
 
-{% block tasksApprovedLink %}
-    {%- if count > 0 -%}
-        <a href="#" id="btn-tasks-approved"
-           data-toggle="false"
-           data-toggle-text="{{ 'task.finished.hide'|trans({ '%number%': count }) }}">
-            {{- 'task.finished.show'|trans({ '%number%': count }) -}}
+{% block taskItemApproved %}
+    {% set viewUrl = path('ems_core_task_ajax_modal_task', {'revisionId': revision.id, 'taskId': task.id, 'fromRevision': true  }) %}
+    <li class="list-group-item tasks-item-approved">
+        <a href="#" class="tasks-item" data-url="{{ viewUrl }}" data-title="Task: {{ task.title }}">
+            <div class="tasks-item-block">
+                <div class="tasks-item-info">
+                    <i class="task-icon {{ task.statusIcon }}"></i>
+                    <div>
+                        <div class="tasks-item-title">{{ task.title }}</div>
+                        <div>{{ 'task.assigned_to'|trans }} <strong>{{ task.assignee|displayname }}</strong></div>
+                    </div>
+                </div>
+            </div>
         </a>
-    {%- endif -%}
+    </li>
 {% endblock %}
 
 {% block modalFooterClose %}
     <div class="pull-left">
-        <button type="button" class="btn btn-sm btn-default" data-dismiss="modal">{{ 'task.close'|trans }}</button>
+        <button type="button" class="btn btn-sm btn-default task-icon-close" data-dismiss="modal">{{ 'task.close'|trans }}</button>
     </div>
 {% endblock %}
 
 {% block modalFooterActions %}
     <div class="pull-left">
-        <button type="button" class="btn btn-sm btn-default" data-dismiss="modal">{{ 'task.close'|trans }}</button>
+        <button type="button" class="btn btn-sm btn-default task-icon-close" data-dismiss="modal">{{ 'task.close'|trans }}</button>
     </div>
-    <div class="pull-right">
-        <div class="btn-group">
-            <a class="btn btn-sm btn-default" href="{{ path('data.revisions', { 'type': contentType.name, 'ouuid': ouuid }) }}">
-                <i class="fa fa-file" aria-hidden="true"></i> {{ 'task.dashboard.action.go_revision'|trans }}
-            </a>
-            <a class="btn btn-sm btn-default" href="{{ path('revision.new-draft', { 'type': contentType.name, 'ouuid': ouuid }) }}">
-                <i class="fa fa-pencil-square-o" aria-hidden="true"></i> {{ 'task.dashboard.action.edit_revision'|trans }}
-            </a>
+    {% if fromRevision == false %}
+        <div class="pull-right">
+            <div class="btn-group">
+                <a class="btn btn-sm btn-default" href="{{ path('data.revisions', { 'type': contentType.name, 'ouuid': ouuid }) }}">
+                    <i class="fa fa-file" aria-hidden="true"></i> {{ 'task.dashboard.action.go_revision'|trans }}
+                </a>
+                <a class="btn btn-sm btn-default" href="{{ path('revision.new-draft', { 'type': contentType.name, 'ouuid': ouuid }) }}">
+                    <i class="fa fa-pencil-square-o" aria-hidden="true"></i> {{ 'task.dashboard.action.edit_revision'|trans }}
+                </a>
+            </div>
         </div>
-    </div>
+    {% endif %}
 {% endblock %}
 
 {% block modalCreateBody %}
@@ -127,8 +200,8 @@
 
 {% block modalCreateFooter %}
     <div class="pull-left">
-        <button id="ajax-modal-submit" class="btn btn-sm btn-primary">{{ 'task.create.submit'|trans }}</button>
-        <button type="button" class="btn btn-sm btn-default" data-dismiss="modal">Cancel</button>
+        <button id="ajax-modal-submit" class="btn btn-sm btn-primary task-icon-create">{{ 'task.create.submit'|trans }}</button>
+        <button type="button" class="btn btn-sm btn-default task-icon-cancel" data-dismiss="modal">Cancel</button>
     </div>
 {% endblock %}
 
@@ -156,11 +229,15 @@
                             <div class="mb-1"><strong>{{ 'task.field.title'|trans }}</strong></div>
                             <div>{{ task.title }}</div>
                         </div>
-                        <div class="col-md-6 mb-3">
+                        <div class="col-md-4 mb-3">
                             <div class="mb-1"><strong>{{ 'task.field.assignee'|trans }}</strong></div>
                             <div>{{ task.assignee|displayname }}</div>
                         </div>
-                        <div class="col-md-6 mb-3">
+                        <div class="col-md-4 mb-3">
+                            <div class="mb-1"><strong>{{ 'task.field.requester'|trans }}</strong></div>
+                            <div>{{ task.createdBy|displayname }}</div>
+                        </div>
+                        <div class="col-md-4 mb-3">
                             <div class="mb-1"><strong>{{ 'task.field.deadline'|trans }}</strong></div>
                             {%- if task.hasDeadline -%}
                                 <div>
@@ -190,25 +267,38 @@
 {% block modalUpdateFooter %}
     <div class="pull-left">
         {%- if task.status != 'completed' -%}
-            <button id="ajax-modal-submit" class="btn btn-sm btn-primary">{{ 'task.update.submit'|trans }}</button>
+            <button id="ajax-modal-submit" class="btn btn-sm btn-primary task-icon-update">{{ 'task.update.submit'|trans }}</button>
         {%- endif -%}
-        <button type="button" class="btn btn-sm btn-default" data-dismiss="modal">{{ 'task.close'|trans }}</button>
-    </div>
-    {% if task.createdBy == app.user.userIdentifier or is_granted('ROLE_TASK_MANAGER') %}
-        <div class="pull-right">
+        {% if task.isRequester(app.user) or is_granted('ROLE_TASK_MANAGER')  %}
             <button type="button" id="btn-task-delete"
                     data-url="{{ path('ems_core_task_ajax_delete', {'revisionId': revisionId, 'taskId': task.id}) }}"
-                    class="btn btn-sm btn-danger"><i class="fa fa-trash"></i> {{ 'task.delete.submit'|trans }}</button>
-        </div>
-    {% endif %}
+                    class="btn btn-sm btn-danger task-icon-delete">{{ 'task.delete.submit'|trans }}</button>
+        {% endif %}
+        <button type="button" class="btn btn-sm btn-default task-icon-close" data-dismiss="modal">{{ 'task.close'|trans }}</button>
+    </div>
+{% endblock %}
+
+{% block modalDeleteBody %}
+    {{ form(form) }}
+{% endblock %}
+
+{% block modalDeleteFooter %}
+    <div class="pull-left">
+        <button id="ajax-modal-submit" class="btn btn-sm btn-danger task-icon-delete">{{ 'task.delete.submit'|trans }}</button>
+        <button type="button" class="btn btn-sm btn-default task-icon-cancel" data-dismiss="modal">Cancel</button>
+    </div>
 {% endblock %}
 
 {% block taskForm %}
     {{ form_start(form) }}
     <div class="row">
         <div class="col-md-12">{{ form_row(form.title) }}</div>
-        <div class="col-md-6">{{ form_row(form.assignee) }}</div>
-        <div class="col-md-6">{{ form_row(form.deadline) }}</div>
+        <div class="col-md-8">{{ form_row(form.assignee) }}</div>
+        {% if form.delay is defined %}
+            <div class="col-md-4">{{ form_row(form.delay) }}</div>
+        {% elseif form.deadline is defined %}
+            <div class="col-md-4">{{ form_row(form.deadline) }}</div>
+        {% endif %}
         <div class="col-md-12">{{ form_row(form.description) }}</div>
     </div>
     {{ form_end(form) }}
